# flutter_ffmpeg

./: README.md  ffi.g.dart  log  pubspec.yaml
cxx/: ffi.cpp
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: audio.dart  ffi.dart  ffmpeg.dart  isolate.dart  texture.dart
lib/src/: audio.dart  context.dart  ffi.dart  isolate.dart
test/: CMakeLists.txt  flutter_ffmpeg_test.dart
windows/: CMakeLists.txt  flutter_ffmpeg_plugin.cpp  flutter_video_renderer.hpp
windows/ffmpeg/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffplay-all.html  ffprobe-all.html
windows/ffmpeg/include/libavutil/: ffversion.h
windows/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
windows/include/flutter_ffmpeg/: flutter_ffmpeg_plugin.h
